--- a/brownie-config.yml
+++ b/brownie-config.yml
@@ -1,7 +1,7 @@
 # use Ganache's forked mainnet mode as the default network
 # NOTE: You don't *have* to do this, but it is often helpful for testing
 networks:
-    default: mainnet-fork
+    default: ftm-main-fork
 
 # automatically fetch contract sources from Etherscan
 autofetch_sources: True
@@ -9,7 +9,7 @@ autofetch_sources: True
 # require OpenZepplin Contracts
 dependencies:
     - OpenZeppelin/openzeppelin-contracts-upgradeable@3.4.0
-    - Badger-Finance/badger-vaults-1.5@0.1.0
+    - Badger-Finance/badger-sett-1.5@0.1
 
 # path remapping to support imports from GitHub/NPM
 compiler:
@@ -17,7 +17,7 @@ compiler:
         version: 0.6.12
         remappings:
             - "@openzeppelin-contracts-upgradeable=OpenZeppelin/openzeppelin-contracts-upgradeable@3.4.0/contracts/"
-            - "@badger-finance=Badger-Finance/badger-vaults-1.5@0.1.0/contracts/"
+            - "@badger-finance=Badger-Finance/badger-sett-1.5@0.1/contracts/"
 
 reports:
     exclude_contracts:
